Fix dropdown overlaps on homepage.

--- a/apps/explorer_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/explorer_web/assets/css/components/_dashboard-banner.scss
@@ -45,7 +45,7 @@
     "legend stats";
   margin-top: -1rem;
   margin-bottom: 3rem;
-  z-index: 10;
+  z-index: 9;
 
   @media (max-width: 992px) {
     grid-template-rows: 2rem auto;
